# GORILLA.RS

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  LICENSE-APACHE  NOTICE  README.md  THIRDPARTY.md
.github/workflows/: ci.yml  pages.yml  release.yml
src/: lib.rs  main.rs  play_ref.rs  render_ref.rs
src/app/: assets.rs  gameplay.rs  mod.rs  presentation.rs  round.rs
tests/: bin_smoke.rs
tools/: analyze_qbasic_audio_capture.py  capture_qbasic_audio.py  compare_gorillas_play_catalog.py  compare_gorillas_render.py  compare_gorillas_scene.py  compare_gorillas_trace.py  extract_gorillas_play_strings.py  sample_trace_scenario.json
web/: index.html
