[package]
name = "gorillas"
version = "1.0.0"
edition = "2021"
description = "Rust recreation of QBASIC GORILLA.BAS with deterministic fidelity tooling"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/w-winter/GORILLA.RS"
homepage = "https://w-winter.github.io/GORILLA.RS/"
publish = false

[dependencies]
macroquad = { version = "0.4", features = ["audio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
